--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: data_table_2
+name: data_table_2_plus
 description: In-place substitute for Flutter's DataTable and PaginatedDataTable with fixed/sticky headers and few extra features
-version: 2.6.0
-homepage: https://github.com/maxim-saplin/data_table_2
-repository: https://github.com/maxim-saplin/data_table_2
+version: 1.0.0
+homepage: https://github.com/nerdknight/data_table_2_plus
+repository: https://github.com/nerdknight/data_table_2_plus
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
